fix: add preselected visibility, show filters when no results, sort by relevance by default, move author filters after content type filter, fix search input glitches, fix url to start session, encode/decode phrase to search, fix home buttons.

--- a/client/src/utils/components/authorFilter/AutorFilter.css
+++ b/client/src/utils/components/authorFilter/AutorFilter.css
@@ -5,4 +5,5 @@
 
 .author-label {
     margin-top: 0.5rem;
+    padding-left: 0.5rem;
 }
